--- a/test.html
+++ b/test.html
@@ -5,7 +5,7 @@
 		<title>이게바로 머릿말</title>
 	</head>
 	<body> 
-		<audio src="wapiecebgm.mp3" autoplay loop></audio>
+		<audio src="./wapiecebgm.mp3" autoplay loop></audio>
 		<header><h1 style="font-size:42px; margin-top:0px">테스트</h1>
 			<h2>이게뭘까?</h2>
 		</header>
