--- a/iframe.html
+++ b/iframe.html
@@ -3,6 +3,6 @@
 <head>
 </head>
 <body>
-<audio src="goschool.mp3" autoplay loop></audio>
+<audio src="barohakyo/goschool.mp3" autoplay loop></audio>
 </body>
 </html>
