--- a/iframe.html
+++ b/iframe.html
@@ -3,7 +3,7 @@
 <head>
 </head>
 <body>
-<audio src="barohakyo/goschool.mp3" autoplay loop>
-테스트
+  <div><audio src="barohakyo/goschool.mp3" autoplay loop></div>
+  <div>테스트</div>
 </body>
 </html>
