--- a/iframe.html
+++ b/iframe.html
@@ -3,7 +3,7 @@
 <head>
 </head>
 <body>
-  <div><audio src="barohakyo/goschool.mp3" autoplay loop></div>
+  <div><audio src="goschool.mp3" autoplay loop></div>
   <div>테스트</div>
 </body>
 </html>
