--- a/iframe.html
+++ b/iframe.html
@@ -3,6 +3,7 @@
 <head>
 </head>
 <body>
-  <div><audio src="goschool.mp3" autoplay loop></div>
+  <div><audio src="goschool.mp3" autoplay loop>
+    <p sytle="color:white">감사합니다.</p></div>
 </body>
 </html>
