--- a/iframe.html
+++ b/iframe.html
@@ -3,7 +3,7 @@
 <head>
 </head>
 <body>
-  <div><audio src="goschool.mp3" autoplay loop></
+  <div><audio src="goschool.mp3" autoplay loop></audio>
     <p sytle="color:white">감사합니다.</p></div>
 </body>
 </html>
