--- a/iframe.html
+++ b/iframe.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <style>
+    #onon{
+      color:white;
+    }
+  </style>
 </head>
 <body>
-  <div><audio src="goschool.mp3" autoplay loop></audio>
-    <p sytle="color:white">감사합니다.</p></div>
+  <div><audio src="goschool.mp3" autoplay loop></audio>감사합니다.</div>
 </body>
 </html>
