--- a/iframe.html
+++ b/iframe.html
@@ -8,6 +8,7 @@
   </style>
 </head>
 <body>
-  <div id="onon"><audio src="goschool.mp3" autoplay loop></audio>감사합니다.</div>
+  <audio src="goschool.mp3" autoplay loop></audio>
+  <div id"onon">감사합니다.</div>
 </body>
 </html>
